--- a/backend/newsletter/templates/unsubscription_confirm.html
+++ b/backend/newsletter/templates/unsubscription_confirm.html
@@ -1,49 +1,11 @@
 {% extends "base.tpl" %} {% block content %}
-  <body>
-    <div id="login">
-      <table>
-        <tbody>
-          <tr class="row">
-            <div style="margin: auto">
-              <img
-                src="https://tno-dev.linea.org.br/img/tno_logo_projetos.png"
-                style="width: 140px; margin: auto"
-                alt="tno_logo_projetos"
-              />
-            </div>
-            <div style="text-align: center; margin: auto">
-              <p
-                style="
-                  font-family: Oxanium;
-                  font-weight: 100;
-                  font-size: 24px;
-                  font-style: normal;
-                  font-weight: normal;
-                  text-align: center;
-                  color: #e5e5e5;
-                  height: 50px;
-                  width: 470px;
-                  padding: 10px;
-                  background-color: #0076bc;
-                "
-              >
-                LIneA Occultation Prediction Database
-              </p>
-              <p
-                style="
-                  font-family: Roboto, Helvetica, Arial, sans-serif;
-                  font-weight: normal;
-                  font-size: 16px;
-                "
-              >
-                Thanks! You have successfully unsubscribed from the <br />LIneA
-                Occultation Prediction Database.
-              </p>
-            </div>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </body>
-</html>
+<!-- Body -->
+<tr>
+  <td style="padding: 20px;">
+    <p style="font-size: 14px; color: #5a5c5f; line-height: 1.5; text-align: center; ">
+      You have successfully unsubscribed from the <br />LIneA
+      Occultation Prediction Database. We hope to see you soon back!
+    </p>
+  </td>
+</tr>
 {% endblock %}
