fix: Fix heading and linea logo

--- a/backend/newsletter/templates/header.html
+++ b/backend/newsletter/templates/header.html
@@ -3,7 +3,20 @@
 <tr>
   <td>
     <div class="header-container">
-      <h1 class="header-title">LIneA Occultation Prediction Database</h1>
+      <table style="width: 100%; border-collapse: collapse;">
+        <tr>
+          <td style="vertical-align: middle; width: 60px;">
+            <img src="https://solarsystem.linea.org.br/img/linea-logo.png" alt="LIneA Logo"
+              style="width: 60px; margin: 0px; margin-left: 40px; display: inline-block;"
+              onerror="this.style.display='none'; this.parentElement.style.width='0'; this.parentElement.nextElementSibling.style.width='100%';">
+          </td>
+          <td style="vertical-align: middle; padding-left: 50px; padding-right:50px; width: auto;">
+            <h1 class="header-title">
+              LIneA Occultation Prediction Database
+            </h1>
+          </td>
+        </tr>
+      </table>
     </div>
   </td>
 </tr>
