refactor(Refatora-email-com-resultados): Melhora o estilo e adiciona mais informações importantes no email

--- a/backend/newsletter/templates/unsubscribe_banner.html
+++ b/backend/newsletter/templates/unsubscribe_banner.html
@@ -4,7 +4,7 @@
     <hr style="margin: 10px 0; border: 0; border-top: 1px solid #dfe0e1;">
     <p style="font-size: 12px; color: #5a5c5f; text-align: center; margin: 5px 0;">
       If you wish to unsubscribe or manage your subscription preferences,
-      <a href={{host}}/login/ style="color:#fb101095;" target="_blank">click here</a>.
+      <a href={{host}}/newsletter_settings/ style="color:#fb101095;" target="_blank">click here</a>.
     </p>
     <hr style="margin: 10px 0; border: 0; border-top: 1px solid #dfe0e1;">
   </td>
